--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,5 +1,6 @@
-@import "../../components/colors.scss";
-@import "../../components/mixins.scss";
+@import '/src/styles/colors.scss';
+@import '/src/styles/mixins.scss';
+
 .main-section{
   width: 100%;
   padding-top: 50px;
