--- a/src/app/user-form/user-form/user-form.component.scss
+++ b/src/app/user-form/user-form/user-form.component.scss
@@ -1,28 +1,11 @@
-@import "../../components/colors.scss";
-@import "../../components/mixins";
+@import '/src/styles/colors.scss';
+@import '/src/styles/mixins.scss';
 
 .form-section {
   width: 100%;
   background-color: $grey;
   padding-bottom: 20px;
   height: 100%;
-  .footer-section {
-    width: 100%;
-    display: flex;
-    padding-top: 30px;
-    align-items: center;
-    justify-content: center;
-    @media screen and (max-width: 600px) {
-      display: none;
-    }
-    .logo {
-      width: 85px;
-      height: 85px;
-      background-image: url('/assets/img/logo2.png');
-      background-size: cover;
-    }
-  }
-
   .form-items {
     padding-top: 60px;
     display: grid;
@@ -30,19 +13,17 @@
     grid-row-gap: 40px;
     width: 100%;
     place-items: center;
-
     .tabs {
       width: 100%;
       display: flex;
       justify-content: center;
-
       .tab {
         display: flex;
         flex-direction: column;
         margin-right: 20px;
         align-items: center;
 
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 730px) {
           &:nth-child(2) {
             display: none;
           }
@@ -67,7 +48,7 @@
           display: none;
           font-size: 20px;
           color: $grey8;
-          @media screen and (max-width: 600px) {
+          @media screen and (max-width: 730px) {
             display: block;
           }
         }
@@ -75,7 +56,7 @@
           width: 185px;
           border-radius: 2px;
           margin-top: 15px;
-          @media screen and (max-width: 600px) {
+          @media screen and (max-width: 730px) {
             display: none;
           }
         }
@@ -102,80 +83,6 @@
       .field-wrapper {
         margin-top: 50px;
       }
-
-      .input-field {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-
-        .invalid {
-          color: $red;
-        }
-
-        .norm {
-          color: $black1;
-        }
-
-        .validation {
-          div {
-            color: $red;
-          }
-        }
-
-        label {
-          color: $black1;
-          line-height: 21px;
-          font-size: 18px;
-          font-weight: 500;
-        }
-
-        input.ng-valid {
-          border: 1.8px solid $green;
-        }
-
-        input.ng-valid.ng-dirty {
-          border: 1.8px solid $green;
-        }
-
-        input.ng-invalid.ng-dirty {
-          border: 1.8px solid $red;
-        }
-
-        input.ng-invalid.ng-touched {
-          border: 1.8px solid $red;
-        }
-
-        input.ng-valid.ng-touched {
-          border: 1.8px solid $green;
-        }
-
-        >input {
-          padding-left: 16px;
-          padding-right: 16px;
-          font-size: 16px;
-          width: 100%;
-          height: 60px;
-          border-radius: 8px;
-          border: 1.8px solid $blue2;
-          margin-top: 10px;
-          margin-bottom: 10px;
-          transition: 1s;
-          color: rgba(0, 0, 0, 0.6);
-
-          &:focus {
-            border: 1.8px solid $light-blue;
-            background: rgba(43, 75, 242, 0.06);
-          }
-        }
-
-        span {
-          font-weight: 300;
-          font-size: 14px;
-          line-height: 21px;
-          color: $black2;
-        }
-      }
-
       >input {
         margin-top: 50px;
       }
@@ -194,85 +101,6 @@
           @include input;
         }
       }
-
-      .select-wrapper {
-        position: relative;
-        margin-top: 53px;
-
-        i {
-          font-size: 14px;
-          color: $black1;
-          position: absolute;
-          right: 25px;
-          top: 25px;
-          z-index: 100;
-        }
-
-        ::ng-deep {
-          .mat-form-field-underline {
-            width: 0;
-          }
-
-          mat-form-field {
-            width: 100%;
-
-            .mat-form-field-flex {
-              background-color: $grey2;
-              height: 60px;
-              border-radius: 8px;
-              display: flex;
-              align-items: center;
-              padding-left: 25px;
-              padding-right: 16px;
-              appearance: none;
-              width: 100%;
-              color: $black1;
-              font-size: 18px;
-              font-weight: 500;
-
-              .mat-option {
-                background-color: $white;
-                color: $black1;
-                font-size: 18px;
-
-                &:hover {
-                  background-color: $grey3;
-                }
-              }
-            }
-          }
-
-          .mat-select-arrow {
-            opacity: 0
-          }
-        }
-      }
-
-      .options {
-        display: flex;
-        align-items: center;
-        height: 65%;
-        width: 60%;
-        justify-content: space-between;
-
-        .option {
-          display: flex;
-          align-items: center;
-
-          input {
-            width: 20px;
-            height: 40px;
-            align-items: center;
-          }
-
-          label {
-            transform: translateY(1px);
-            margin-right: 20px;
-            margin-left: 20px;
-          }
-        }
-      }
-
       .input-fields {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -281,15 +109,7 @@
         @media screen and (max-width: 600px) {
           grid-template-columns: 1fr;
           grid-row-gap: 30px;
-          &:nth-child(3){
-            grid-template-columns: 1fr;
-          }
         }
-
-        svg {
-          margin-left: 20px;
-        }
-
         &:nth-child(2) {
           padding-top: 40px;
           border-bottom: 1px solid $grey5;
@@ -299,8 +119,6 @@
           padding-top: 40px;
           grid-template-columns: 1fr;
         }
-        
-
         &:nth-child(4) {
           padding-top: 40px;
           border-bottom: 1px solid $grey5;
@@ -314,82 +132,9 @@
         &:nth-child(6) {
           height: 150px;
           padding-top: 40px;
-
-          .options {
-            width: 75%;
-          }
         }
       }
     }
-  }
-}
-
-
-::ng-deep {
-  ngx-dropzone-image-preview {
-    width: 100% !important;
-    height: 100% !important;
-    margin: 0 !important;
-
-    img {
-      width: 100% !important;
-      opacity: 1 !important;
-    }
-  }
-
-  .mat-form-field-label {
-    color: $black1;
-  }
-
-  .mat-select-panel {
-    width: 100%;
-    height: max-content;
-    position: relative;
-    right: 5px;
-    top: 30px;
-  }
-
-  .mat-form-field-required-marker {
-    opacity: 0;
-  }
-
-  .mat-form-field.ng-invalid {
-    .mat-form-field-label {
-      color: $black1;
-    }
-  }
-
-  .mat-form-field.ng-invalid.ng-touched {
-    .mat-form-field-flex {
-      border: 1.8px solid $red;
-    }
-
-    .mat-form-field-label {
-      color: $black1;
-    }
-  }
-
-  .mat-form-field.mat-focused .mat-form-field-label {
-    color: $black1;
-  }
-
-  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: $black1;
-    background-color: $grey3;
-  }
-
-  .mat-option:hover:not(.mat-option-disabled),
-  .mat-option:focus:not(.mat-option-disabled) {
-    background-color: $grey3;
-  }
-
-  .mat-option.mat-active {
-    background-color: transparent;
-    overflow-y: hidden;
-  }
-
-  .mat-select-panel {
-    background: $white;
   }
 }
 
@@ -399,32 +144,5 @@
   border: 2px solid $black1;
 }
 
-.disableUpload {
-  cursor: pointer;
-}
-
-.top {
-  margin-top: 20px;
-}
-
-.invalid {
-  color: $red  !important;
-}
-
-.invalid-border {
-  border: 1px solid $red  !important;
-}
 
 
-.background-inv {
-  background-color: $red2  !important;
-  border: 2px dashed $red  !important;
-}
-
-
-.pop-up {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: red;
-}
