--- a/src/app/data-list/data-list.component.scss
+++ b/src/app/data-list/data-list.component.scss
@@ -1,4 +1,6 @@
-@import '../components/colors.scss';
+@import '/src/styles/colors.scss';
+@import '/src/styles/mixins.scss';
+
 
 .info-section{
     width: 100%;
@@ -38,7 +40,7 @@
                     height: 178px;
                     margin-right: 30px;
                     @media screen and (max-width: 1020px) {
-                        width: auto;
+                        width: 100%;
                     }
                     img{
                         width: 100%;
@@ -73,4 +75,15 @@
 
 .bg{
     max-width: 1100px;
+}
+
+.error{
+    width: 100%;
+    text-align: center;
+    padding-top: 30px;
+    h1{
+        font-size: 50px;
+        font-weight: 700;
+        color: $black1;
+    }
 }
