--- a/src/app/laptop-form/laptop-form/laptop-form.component.scss
+++ b/src/app/laptop-form/laptop-form/laptop-form.component.scss
@@ -1,29 +1,12 @@
-@import "../../components/colors.scss";
-@import "../../components/mixins";
+@import '/src/styles/colors.scss';
+@import '/src/styles/mixins.scss';
+
 
 .form-section {
   width: 100%;
   background-color: $grey;
   padding-bottom: 20px;
   height: 100%;
-  .footer-section {
-    width: 100%;
-    display: flex;
-    padding-top: 30px;
-    align-items: center;
-    justify-content: center;
-
-    @media screen and (max-width:600px) {
-      display: none;
-    }
-
-    .logo {
-      width: 85px;
-      height: 85px;
-      background-image: url('/assets/img/logo2.png');
-      background-size: cover;
-    }
-  }
 
   .form-items {
     padding-top: 60px;
@@ -123,397 +106,76 @@
           }
         }
 
-        .laptop-image-uploader-wrapper {
-          width: 100%;
-          padding-top: 30px;
-
-          .laptop-image-uploader-items {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .laptop-image-info {
-              display: flex;
-              align-items: center;
-              font-size: 18px;
-
-              h4 {
-                color: $black3;
-                font-size: 18px;
-              }
-
-              span {
-                font-size: 18px;
-                padding-left: 5px;
-
-                &:nth-child(1) {
-                  color: $black3;
-                }
-
-                &:nth-child(2) {
-                  color: $grey6;
-                }
-              }
-            }
-
-            .custom-dropzone-uploader {
-              width: max-content;
-              height: max-content;
-              display: flex;
-              align-items: center;
-              justify-content: flex-end;
-              border: 0;
-
-              .uploader {
-                @include input;
-                padding: 18px 60px;
-
-                @media screen and (max-width:600px) {
-                  width: 100%;
-                  padding: 10px 5px 10px 5px;
-                }
-              }
-            }
-          }
-        }
-
-        .upload {
-          display: flex;
-          flex-direction: column;
-        }
-
-        .custom-dropzone {
-          width: 100%;
-          height: 423px;
-          background-color: $grey;
-          border: 2px dashed $blue4;
-
-          .upload-items {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            align-items: center;
-
-            svg {
-              margin-bottom: 20px;
-            }
-
-            h2 {
-              color: $blue4;
-            }
-
-            button {
-              padding: 18px 60px;
-              margin-top: 40px;
-              @include input;
-            }
-          }
-        }
-      }
-
-      .field-wrapper {
-        margin-top: 50px;
-      }
-
-      .input-field {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-
-        .invalid {
-          color: $red;
-        }
-
-        .norm {
-          color: $black1;
-        }
-
-        .validation {
-          div {
-            color: $red;
-          }
-        }
-
-        label {
-          color: $black1;
-          line-height: 21px;
-          font-size: 18px;
-          font-weight: 500;
-        }
-
-        input.ng-valid {
-          border: 1.8px solid $green;
-        }
-
-        input.ng-valid.ng-dirty {
-          border: 1.8px solid $green;
-        }
-
-        input.ng-invalid.ng-dirty {
-          border: 1.8px solid $red;
-        }
-
-        >input {
-          padding-left: 16px;
-          padding-right: 16px;
-          font-size: 16px;
-          width: 100%;
-          height: 60px;
-          border-radius: 8px;
-          border: 1.8px solid $blue2;
-          margin-top: 10px;
-          margin-bottom: 10px;
-          transition: 1s;
-          color: rgba(0, 0, 0, 0.6);
-
-          &:focus {
-            border: 1.8px solid $light-blue;
-            background: rgba(43, 75, 242, 0.06);
-          }
-        }
-
-        span {
-          font-weight: 300;
-          font-size: 14px;
-          line-height: 21px;
-          color: $black2;
-        }
-      }
-
-      >input {
-        margin-top: 50px;
-      }
-
-      .submit-wrapper {
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-
-        button {
-          width: 176px;
-          height: 60px;
+        .field-wrapper {
           margin-top: 50px;
-          @include input;
-        }
-      }
-
-      .select-wrapper {
-        position: relative;
-        margin-top: 53px;
-
-        i {
-          font-size: 14px;
-          color: $black1;
-          position: absolute;
-          right: 25px;
-          top: 25px;
-          z-index: 100;
         }
 
-        ::ng-deep {
-          .mat-form-field-underline {
-            width: 0;
-          }
+        .input-fields {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          width: 100%;
+          grid-column-gap: 60px;
 
-          mat-form-field {
-            width: 100%;
+          @media screen and (max-width: 600px) {
+            grid-template-columns: 1fr;
+            grid-row-gap: 30px;
 
-            .mat-form-field-flex {
-              background-color: $grey2;
-              height: 60px;
-              border-radius: 8px;
-              display: flex;
-              align-items: center;
-              padding-left: 25px;
-              padding-right: 16px;
-              appearance: none;
-              width: 100%;
-              color: $black1;
-              font-size: 18px;
-              font-weight: 500;
-
-              .mat-option {
-                background-color: $white;
-                color: $black1;
-                font-size: 18px;
-
-                &:hover {
-                  background-color: $grey3;
-                }
-              }
+            &:nth-child(3) {
+              grid-template-columns: 1fr !important;
             }
           }
 
-          .mat-select-arrow {
-            opacity: 0
+          &:nth-child(2) {
+            padding-top: 40px;
+            border-bottom: 1px solid $grey5;
+            padding-bottom: 60px;
+
+            @media screen and (max-width: 600px) {
+              padding-top: 20px;
+              padding-bottom: 20px;
+              border-bottom: 0px;
+            }
           }
-        }
-      }
-
-      .options {
-        display: flex;
-        align-items: center;
-        height: 65%;
-        width: 60%;
-        justify-content: space-between;
-
-        .option {
-          display: flex;
-          align-items: center;
-
-          input {
-            width: 20px;
-            height: 40px;
-            align-items: center;
-          }
-
-          label {
-            transform: translateY(1px);
-            margin-right: 20px;
-            margin-left: 20px;
-          }
-        }
-      }
-
-      .input-fields {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        width: 100%;
-        grid-column-gap: 60px;
-
-        @media screen and (max-width: 600px) {
-          grid-template-columns: 1fr;
-          grid-row-gap: 30px;
 
           &:nth-child(3) {
-            grid-template-columns: 1fr !important;
-          }
-        }
+            padding-top: 40px;
+            grid-template-columns: 1fr 1fr 1fr;
 
-        svg {
-          margin-left: 20px;
-        }
-
-        &:nth-child(2) {
-          padding-top: 40px;
-          border-bottom: 1px solid $grey5;
-          padding-bottom: 60px;
-
-          @media screen and (max-width: 600px) {
-            padding-top: 20px;
-            padding-bottom: 20px;
-          }
-        }
-
-        &:nth-child(3) {
-          padding-top: 40px;
-          grid-template-columns: 1fr 1fr 1fr;
-
-          @media screen and (max-width: 600px) {
-            padding-top: 20px;
-          }
-        }
-
-        &:nth-child(4) {
-          padding-top: 40px;
-          border-bottom: 1px solid $grey5;
-          padding-bottom: 60px;
-
-          @media screen and (max-width: 600px) {
-            padding-top: 20px;
-            padding-bottom: 20px;
-          }
-        }
-
-        &:nth-child(5) {
-          padding-top: 40px;
-
-          @media screen and (max-width: 600px) {
-            padding-top: 20px;
-          }
-        }
-
-        &:nth-child(6) {
-          height: 150px;
-          padding-top: 40px;
-
-          @media screen and (max-width: 600px) {
-            padding-top: 20px;
+            @media screen and (max-width: 600px) {
+              padding-top: 20px;
+            }
           }
 
-          .options {
-            width: 75%;
+          &:nth-child(4) {
+            padding-top: 40px;
+            border-bottom: 1px solid $grey5;
+            padding-bottom: 60px;
+
+            @media screen and (max-width: 600px) {
+              padding-top: 20px;
+              padding-bottom: 20px;
+            }
+          }
+
+          &:nth-child(5) {
+            padding-top: 40px;
+
+            @media screen and (max-width: 600px) {
+              padding-top: 20px;
+            }
+          }
+
+          &:nth-child(6) {
+            height: 150px;
+            padding-top: 40px;
+
+            @media screen and (max-width: 600px) {
+              padding-top: 20px;
+            }
           }
         }
       }
     }
-  }
-}
-
-
-::ng-deep {
-  ngx-dropzone-image-preview {
-    width: 100% !important;
-    height: 100% !important;
-    margin: 0 !important;
-
-    img {
-      width: 100% !important;
-      opacity: 1 !important;
-    }
-  }
-
-  .mat-form-field-label {
-    color: $black1;
-  }
-
-  .mat-select-panel {
-    width: 100%;
-    height: max-content;
-    position: relative;
-    right: 5px;
-    top: 30px;
-    background: $white;
-  }
-
-  .mat-form-field-required-marker {
-    opacity: 0;
-  }
-
-  .mat-form-field.ng-invalid {
-    .mat-form-field-label {
-      color: $black1;
-    }
-  }
-
-  .mat-form-field.ng-invalid.ng-touched {
-    .mat-form-field-flex {
-      border: 1.8px solid $red;
-    }
-
-    .mat-form-field-label {
-      color: $black1;
-    }
-  }
-
-  .mat-form-field.mat-focused .mat-form-field-label {
-    color: $black1;
-  }
-
-  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: $black1;
-    background-color: $grey3;
-  }
-
-  .mat-option:hover:not(.mat-option-disabled),
-  .mat-option:focus:not(.mat-option-disabled) {
-    background-color: $grey3;
-  }
-
-  .mat-option.mat-active {
-    background-color: transparent;
-    overflow-y: hidden;
   }
 }
 
@@ -523,33 +185,7 @@
   border: 2px solid $black1;
 }
 
-.disableUpload {
-  cursor: pointer;
-}
-
-.top {
-  margin-top: 20px;
-}
-
-.invalid {
-  color: $red  !important;
-}
-
-
-.background-inv {
-  background-color: $red2  !important;
-  border: 2px dashed $red  !important;
-}
-
-.disable {
-  pointer-events: none;
-}
-
-.invalid-border {
-  border: 1px solid $red  !important;
-}
-
-.pop-up{
+.pop-up {
   width: 100%;
   height: 100%;
   top: 0;
@@ -559,10 +195,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   @media screen and (max-width:600px) {
     background-color: $white;
   }
-  .items{
+
+  .items {
     display: flex;
     flex-direction: column;
     width: 700px;
@@ -571,24 +209,28 @@
     background-color: $white;
     display: flex;
     align-items: center;
-    .success{
-        width: 137px;
-        height: 218px;
-        background-image: url('/assets/img/Frame.png');
-        background-size: cover;
+
+    .success {
+      width: 137px;
+      height: 218px;
+      background-image: url('/assets/img/Frame.png');
+      background-size: cover;
     }
-    .success-message{
+
+    .success-message {
       color: $black3;
       font-size: 25px;
       font-weight: 700;
     }
-    .toList{
+
+    .toList {
       @include input;
       padding: 18px 60px;
       margin-top: 70px;
     }
-    .toHome{
-      margin-top:30px;
+
+    .toHome {
+      margin-top: 30px;
       color: $blue5;
       font-size: 20px;
       font-weight: 500;
