--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" class="select-wrapper">
+<div class="select-wrapper">
     <i class="fa-solid fa-angle-down"></i>
     <mat-form-field appearance="fill">
         <mat-label>{{label}}</mat-label>
