--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -4,6 +4,7 @@
 .main-section{
   width: 100%;
   padding-top: 50px;
+  padding-bottom: 30px;
   .main-items{
       width: 100%;
       display: grid;
