fix: fix date validation

--- a/src/app/laptop-form/laptop-form/laptop-form.component.html
+++ b/src/app/laptop-form/laptop-form/laptop-form.component.html
@@ -32,7 +32,7 @@
                         <app-input-field-option optionOne="SSD" optionTwo="HDD"  [isSubmited]="isSubmited" control="laptop_hard_drive_type" controlName="მეხსიერების ტიპი" option="laptop_hard_drive_type"></app-input-field-option>
                     </div>
                     <div class="input-fields">
-                        <app-input-field placeHolder="დდ/თთ/წწწწ" patternText="ჩაწერე სწორი თარიღი"  top="true" controlName="შეძენის რიცხვი (არჩევითი)" control="laptop_purchase_date" hint="ლათინური ასოები, ციფრები, !@#$%^&*()_+=" [isSubmited]="isSubmited"></app-input-field>
+                        <app-input-field placeHolder="თთ/დდ/წწწწ" patternText="ჩაწერე სწორი თარიღი"  top="true" controlName="შეძენის რიცხვი (არჩევითი)" control="laptop_purchase_date" [isSubmited]="isSubmited"></app-input-field>
                         <app-input-field placeHolder="" patternText="ჩაწერეთ სწორი რიცხვი"  top="true" controlName="ფასი" control="laptop_price" hint="მხოლოდ ციფრები" [isSubmited]="isSubmited"></app-input-field>
                     </div>
                     <div class="input-fields">
